Fix missing fallback spacing in prod

--- a/src/components/edit-button/style.less
+++ b/src/components/edit-button/style.less
@@ -31,6 +31,10 @@
 }
 
 .fallback {
+	padding-top: 4rem;
+}
+
+.fallbackInner {
 	background: var(--color-warn-bg);
 	padding: 0.75rem 1rem;
 	color: #444;
